RUS-1191: test add coverage to code

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,13 +5,22 @@ stages:
 test:
   stage: test
   image: php:8.0-cli
-  script:
-    - apt-get update && apt-get install -qy unzip git
+  variables:
+    XDEBUG_MODE: coverage
+  before_script:
+    - apt-get update && apt-get -yq install git unzip zip libzip-dev zlib1g-dev
+    - docker-php-ext-install zip
+    - pecl install xdebug && docker-php-ext-enable xdebug
     - curl -sSf "https://getcomposer.org/installer" | php -- --filename=composer --install-dir=/usr/local/bin
     - composer update
+    - composer require --dev phpunit/phpunit phpunit/php-code-coverage
+  script:
     - vendor/bin/phpstan --memory-limit=-1 --no-progress
-    - vendor/bin/phpunit
+    - vendor/bin/phpunit --coverage-text --coverage-cobertura=coverage.cobertura.xml
     - vendor/bin/ecs --no-error-table --no-progress-bar
+  artifacts:
+    reports:
+      cobertura: coverage.cobertura.xml
 
 test lowest deps:
   stage: test
