--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,21 @@ stages:
   - test
   - deploy
 
+code style:
+  stage: test
+  image: php:8.0-cli
+  variables:
+    XDEBUG_MODE: coverage
+  before_script:
+    - apt-get update && apt-get -yq install git unzip zip libzip-dev zlib1g-dev
+    - docker-php-ext-install zip
+    - curl -sSf "https://getcomposer.org/installer" | php -- --filename=composer --install-dir=/usr/local/bin
+    - composer update
+    - composer require --dev phpunit/phpunit phpunit/php-code-coverage
+  script:
+    - vendor/bin/phpstan --memory-limit=-1 --no-progress
+    - vendor/bin/ecs --no-error-table --no-progress-bar
+
 test:
   stage: test
   image: php:8.0-cli
@@ -15,8 +30,6 @@ test:
     - composer update
     - composer require --dev phpunit/phpunit phpunit/php-code-coverage
   script:
-    - vendor/bin/phpstan --memory-limit=-1 --no-progress
-    - vendor/bin/phpunit --coverage-text --coverage-cobertura=coverage.cobertura.xml
     - vendor/bin/ecs --no-error-table --no-progress-bar
   artifacts:
     reports:
@@ -25,11 +38,16 @@ test:
 test lowest deps:
   stage: test
   image: php:8.0-cli
-  script:
-    - apt-get update && apt-get install -qy unzip git
+  variables:
+    XDEBUG_MODE: coverage
+  before_script:
+    - apt-get update && apt-get -yq install git unzip zip libzip-dev zlib1g-dev
+    - docker-php-ext-install zip
     - curl -sSf "https://getcomposer.org/installer" | php -- --filename=composer --install-dir=/usr/local/bin
     - composer update --prefer-lowest
-    - vendor/bin/phpunit
+    - composer require --dev phpunit/phpunit phpunit/php-code-coverage
+  script:
+    - vendor/bin/phpunit --coverage-text --coverage-cobertura=coverage.cobertura.xml
 
 deploy:
   stage: deploy
