--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,6 @@ code style:
     - docker-php-ext-install zip
     - curl -sSf "https://getcomposer.org/installer" | php -- --filename=composer --install-dir=/usr/local/bin
     - composer update
-    - composer require --dev phpunit/phpunit phpunit/php-code-coverage
   script:
     - vendor/bin/phpstan --memory-limit=-1 --no-progress
     - vendor/bin/ecs --no-error-table --no-progress-bar
@@ -28,9 +27,9 @@ test:
     - pecl install xdebug && docker-php-ext-enable xdebug
     - curl -sSf "https://getcomposer.org/installer" | php -- --filename=composer --install-dir=/usr/local/bin
     - composer update
-    - composer require --dev phpunit/phpunit phpunit/php-code-coverage
+    - composer require --dev phpunit/php-code-coverage
   script:
-    - vendor/bin/ecs --no-error-table --no-progress-bar
+    - vendor/bin/phpunit --coverage-text --coverage-cobertura=coverage.cobertura.xml
   artifacts:
     reports:
       cobertura: coverage.cobertura.xml
@@ -47,7 +46,7 @@ test lowest deps:
     - composer update --prefer-lowest
     - composer require --dev phpunit/phpunit phpunit/php-code-coverage
   script:
-    - vendor/bin/phpunit --coverage-text --coverage-cobertura=coverage.cobertura.xml
+    - vendor/bin/phpunit
 
 deploy:
   stage: deploy
