--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "phpstan/phpstan": "^1.4",
     "phpstan/phpstan-phpunit": "^1.0",
     "phpstan/phpstan-strict-rules": "^1.1",
+    "phpunit/php-code-coverage": "^9.2",
     "phpunit/phpunit": "^9.5",
     "roave/security-advisories": "dev-latest",
     "symplify/easy-coding-standard": "^10.0"
