--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "pik-broker/request-object-resolver-bundle",
+  "name": "kvarta/request-object-resolver-bundle",
   "description": "Bundle for resolving and validate http request to object",
   "type": "symfony-bundle",
   "require": {
@@ -23,12 +23,12 @@
   },
   "autoload": {
     "psr-4": {
-      "RequestObjectResolverBundle\\": "src/"
+      "Kvarta\\RequestObjectResolverBundle\\": "src/"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "RequestObjectResolverBundle\\Tests\\": "tests/"
+      "Kvarta\\RequestObjectResolverBundle\\Tests\\": "tests/"
     }
   },
   "license": "proprietary",
