--- a/.github/workflows/bundle-tests.yml
+++ b/.github/workflows/bundle-tests.yml
@@ -13,7 +13,7 @@ jobs:
     #  To automatically get bug fixes and new Php versions for shivammathur/setup-php,
     # change this to (see https://github.com/shivammathur/setup-php#bookmark-versioning):
     # uses: shivammathur/setup-php@v2
-    - uses: shivammathur/setup-php@2cb9b829437ee246e9b3cac53555a39208ca6d28
+    - uses: shivammathur/setup-php@v2
       with:
         php-version: '8.0'
     - uses: actions/checkout@v2
@@ -26,7 +26,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Execute phpstan checks
       run: vendor/bin/phpstan --memory-limit=-1 --no-progress
     - name: Execute ecs checks
