--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.1/phpunit.xsd"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
          bootstrap="vendor/autoload.php"
+         cacheResultFile=".phpunit.cache/test-results"
          executionOrder="depends,defects"
+         forceCoversAnnotation="false"
+         beStrictAboutCoversAnnotation="true"
          beStrictAboutOutputDuringTests="true"
+         beStrictAboutTodoAnnotatedTests="true"
+         convertDeprecationsToExceptions="true"
          failOnRisky="true"
          failOnWarning="true"
-         cacheDirectory=".phpunit.cache"
-         requireCoverageMetadata="false"
-         beStrictAboutCoverageMetadata="true">
-    <coverage/>
-    <testsuites>
-        <testsuite name="RequestObjectResolverBundle Test suite">
-            <directory>tests</directory>
-        </testsuite>
-    </testsuites>
-    <source>
-        <include>
-            <directory suffix=".php">./src</directory>
-        </include>
-        <exclude>
-            <file>src/RequestObjectResolverBundle.php</file>
-            <directory>src/DependencyInjection/</directory>
-        </exclude>
-    </source>
+         verbose="true">
+  <coverage processUncoveredFiles="true">
+    <include>
+      <directory suffix=".php">./src</directory>
+    </include>
+    <exclude>
+      <file>src/RequestObjectResolverBundle.php</file>
+      <directory>src/DependencyInjection/</directory>
+    </exclude>
+  </coverage>
+  <testsuites>
+    <testsuite name="RequestObjectResolverBundle Test suite">
+      <directory>tests</directory>
+    </testsuite>
+  </testsuites>
 </phpunit>
