--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     "phpstan/phpstan": "^1.10",
     "phpstan/phpstan-phpunit": "^1.3",
     "phpstan/phpstan-strict-rules": "^1.5",
-    "phpunit/php-code-coverage": "^9.2",
-    "phpunit/phpunit": "^9.6",
+    "phpunit/php-code-coverage": "^10.1",
+    "phpunit/phpunit": "^10.5",
     "roave/security-advisories": "dev-latest",
     "symplify/easy-coding-standard": "^11.3",
     "symplify/config-transformer": "^12.0"
@@ -32,7 +32,7 @@
       "RequestObjectResolverBundle\\Tests\\": "tests/"
     }
   },
-  "license": "proprietary",
+  "license": "MIT",
   "authors": [
     {
       "name": "Aleksandr Kvintilyanov",
