--- a/.github/workflows/bundle-higher-tests.yml
+++ b/.github/workflows/bundle-higher-tests.yml
@@ -1,4 +1,4 @@
-name: Symfony bundle testing
+name: Prefer higher dependencies
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
     # uses: shivammathur/setup-php@v2
     - uses: shivammathur/setup-php@v2
       with:
-        php-version: '8.0'
+        php-version: '8.1'
     - uses: actions/checkout@v2
     - name: Cache Composer packages
       id: composer-cache
