--- a/.github/workflows/bundle-higher-tests.yml
+++ b/.github/workflows/bundle-higher-tests.yml
@@ -26,7 +26,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
     - name: Install Dependencies
-      run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+      run: composer update --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Execute phpstan checks
       run: vendor/bin/phpstan --memory-limit=-1 --no-progress
     - name: Execute ecs checks
