--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,10 @@
   "require": {
     "php": ">=8.1",
     "doctrine/inflector": "^2.0",
-    "symfony/framework-bundle": "^5.4|^6.0",
-    "symfony/property-access": "^5.4|^6.0",
-    "symfony/serializer": "^5.4|^6.0",
-    "symfony/validator": "^5.4|^6.0",
-    "symfony/yaml": "^5.4|^6.0"
+    "symfony/framework-bundle": "^6.0",
+    "symfony/property-access": "^6.0",
+    "symfony/serializer": "^6.0",
+    "symfony/validator": "^6.0"
   },
   "require-dev": {
     "doctrine/annotations": "^1.14",
