--- a/.github/workflows/bundle-lower-tests.yml
+++ b/.github/workflows/bundle-lower-tests.yml
@@ -42,6 +42,8 @@ jobs:
         coverage_clover: coverage/clover.xml
     - name: Upload to Codecov
       uses: codecov/codecov-action@v2
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       with:
         files: ./coverage.xml
         verbose: true
